--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "This collection check health status of API's",
   "scripts": {
-    "test": "newman run APIHealthCheck.postman_collection.json"
+    "test-collection": "newman run APIHealthCheck.postman_collection.json"
   },
   "author": "Pradeep Chintakunta",
   "dependencies": {
